--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "marketplace-back",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.4.3"
+    "mongoose": "^8.4.3",
+    "safe-buffer": "^5.2.1"
   }
 }
